# rust-experiment-workspace

./: Cargo.toml  README.md
pty-bash-hook/: Cargo.toml  bash_recorder.sh  powershell_recorder.ps1  powershell_recorder_fixed.ps1
pty-bash-hook/src/: main.rs
remote-shell/: Cargo.toml
remote-shell/src/: api.rs  main.rs
remote-shell/static/: index.html  shell-integration.bash  shell-integration.zsh
shell-prompt/: Cargo.toml
shell-prompt/src/: main.rs
text-ui/: Cargo.toml
text-ui/src/: main.rs
